--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
     <h3><a href="sport.html">SPORTS</a></h3>
     <h3><a href="music.html">MUSIC</a></h3>
     <hr size="3" color="brown">
-    <footer align = "center"><h3><a href="Contact.html">contact_Me</a></h3></footer>
+    <footer align = "center"><h3><a href="contact.html">Contact_Me</a></h3></footer>
 </body>
 </html>
